English Dolibarr ChangeLog


***** ChangeLog for 2.8 compared to 2.7 *****

For users:
- New: Can filter on user on stock movement list
- New: When creating a third party from a member, it is set as a new
  customer.
- New: Can use {tttt} in numbering mask setup. It will be replaced
  with third party type.
- Fix: bug #28055 : Unable to modify the date of a cloned command
- Fix: bug #27891


***** ChangeLog for 2.7 compared to 2.6 *****

For users:
- New: Add a print icon to show a page to print without menus.
- New: Can add a free text on bank cheque receipts.
- New: Price level can be defined also for prospects.
- New: Add a help and support center.
- New: Can export commercial proposals.
- New: Can use a cache for xcal exports.
- New: Option for faster confirmation process with one ajax popup.
- New: Complete theme bluelagoon and rodolphe
- New: Can select third parties emails in emailing module for all
       third parties with expired contract's lines.
- New: Can add a field errors-to in emailing.
- New: Can use inline images in emails.
- New: Add predefined invoices (can be use for repeated invoices).
- New: Add a confirmation when cloning products.
- New: Add stock in product lists.
- New: Can filter list of stock movement on date or product.
- New: Added a link from product list to their stock movements.
- New: Several speed enhancements after using the Google Page speed 
  plugin for FireBug.
- New: Add a confirmation on dangerous admin purge feature.
- New: Add navigation on donation sheets.
- New: Added estimated value for stocks.
- New: Added module Gravatar to found photo of users or members
       from their email on gravatar.com.
- New: Include Dolibarr version in suggested dump filename.
- New: Enhancement in project module.
- New: Add log tab on emailing module.
- New: Minor enhancements in look themes.
- New: Add option to hide help in menu.
- New: Added a "force LDAP synchronize" on member and contact cards.