@@ -9,6 +9,7 @@ For users:
   customer.
 - New: Can use {tttt} in numbering mask setup. It will be replaced
   with third party type.
+- New: VAT number is stored in one field. This is more "international".
 - Fix: bug #28055 : Unable to modify the date of a cloned command
 - Fix: bug #27891
 
